Wasm: wallet cache persistence (#868)
* Expose wallet cache persister

* Implement IndexedDB wallet cache persister

* Refactor wallet persister interfaces

* Implement Node Fs persister

* Encrypt wallet updates

* Remove unnecessary tokio_with_wasm features

* Improve async persist logs

* Fix flutter binding generation

* Use dynamic dispatch for wallet_cache_persister

* Optimize conditional compilation branching

* Address review

* Refactor structure

--- a/lib/wasm/Makefile
+++ b/lib/wasm/Makefile
@@ -8,10 +8,13 @@ init:
 	cargo install wasm-pack
 	rustup target add wasm32-unknown-unknown
 
-clippy: clippy-base clippy-node
+clippy: clippy-default clippy-browser clippy-node
 
-clippy-base:
+clippy-default:
 	$(CLANG_PREFIX) cargo clippy --all-targets --target=wasm32-unknown-unknown -- -D warnings
+
+clippy-browser:
+	$(CLANG_PREFIX) cargo clippy --all-targets --target=wasm32-unknown-unknown --features browser -- -D warnings
 
 clippy-node: 
 	$(CLANG_PREFIX) cargo clippy --all-targets --target=wasm32-unknown-unknown --features node-js -- -D warnings
@@ -19,7 +22,7 @@ clippy-node:
 build: build-bundle build-deno build-node build-web
 
 build-bundle:
-	$(CLANG_PREFIX) wasm-pack build --target bundler --release --out-dir pkg/bundle
+	$(CLANG_PREFIX) wasm-pack build --target bundler --release --out-dir pkg/bundle -- features browser
 
 build-deno:
 	$(CLANG_PREFIX) wasm-pack build --target deno --release --out-dir pkg/deno
@@ -28,7 +31,7 @@ build-node:
 	$(CLANG_PREFIX) wasm-pack build --target nodejs --release --out-dir pkg/node --features node-js
 
 build-web:
-	$(CLANG_PREFIX) wasm-pack build --target web --release --out-dir pkg/web
+	$(CLANG_PREFIX) wasm-pack build --target web --release --out-dir pkg/web -- features browser
 
 test: test-firefox test-node
 
@@ -36,10 +39,10 @@ test-node:
 	$(CLANG_PREFIX) wasm-pack test --node --features node-js
 
 test-firefox:
-	$(CLANG_PREFIX) wasm-pack test --headless --firefox --features browser-tests
+	$(CLANG_PREFIX) wasm-pack test --headless --firefox --features browser
 
 test-chrome:
-	$(CLANG_PREFIX) wasm-pack test --headless --chrome --features browser-tests
+	$(CLANG_PREFIX) wasm-pack test --headless --chrome --features browser
 
 test-safari:
-	$(CLANG_PREFIX) wasm-pack test --headless --safari --features browser-tests
+	$(CLANG_PREFIX) wasm-pack test --headless --safari --features browser
