--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_breez_liquid
 description: Flutter wrapper around Dart bindings for the Breez Liquid SDK
-version: 0.7.2-dev1
+version: 0.8.0
 homepage: https://breez.technology
 repository: https://github.com/breez/breez-sdk-liquid-flutter
 publish_to: 'none'
@@ -15,7 +15,7 @@ dependencies:
   breez_liquid:
     git:
       url: https://github.com/breez/breez-sdk-liquid-dart
-      ref: 0.7.2-dev1
+      ref: 0.8.0
   ffigen: ^18.0.0
 
 dev_dependencies:
