--- a/packages/wasm/package.json
+++ b/packages/wasm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@breeztech/breez-sdk-liquid",
-  "version": "0.7.2-dev1",
+  "version": "0.8.0",
   "description": "Breez Liquid SDK",
   "repository": "https://github.com/breez/breez-sdk-liquid",
   "author": "Breez <contact@breez.technology> (https://github.com/breez)",
