--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/BoltzExchange/regtest.git
 [submodule "regtest/waterfalls-service/waterfalls"]
 	path = regtest/waterfalls-service/waterfalls
-	url = https://github.com/RCasatta/waterfalls.git
+	url = https://github.com/breez/waterfalls.git
