--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -359,6 +359,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
       - name: Install Wasm target
         run: rustup target add wasm32-unknown-unknown
 
