--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -77,7 +77,7 @@ maybe-sync = { version = "0.1.1", features = ["sync"] }
 prost = "^0.11"
 tonic = { version = "^0.8", features = ["tls", "tls-webpki-roots"] }
 uuid = { version = "1.8.0", features = ["v4"] }
-boltz-client = { git = "https://github.com/danielgranhao/boltz-rust", rev = "9c703b20a86cb8a4d9a0d3d6dc2f610a0389fe7a", features = [
+boltz-client = { git = "https://github.com/dangeross/boltz-rust", rev = "2b150c40906fac9c312902c72003b4bd0a89dc2c", features = [
     "electrum",
 ] }
 rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "e36644127f31fa6e7ea0999b59432deb4a07f220", features = [
@@ -98,7 +98,7 @@ tonic = { version = "0.12", default-features = false, features = [
     "codegen",
     "prost",
 ] }
-boltz-client = { git = "https://github.com/danielgranhao/boltz-rust", rev = "9c703b20a86cb8a4d9a0d3d6dc2f610a0389fe7a" }
+boltz-client = { git = "https://github.com/dangeross/boltz-rust", rev = "2b150c40906fac9c312902c72003b4bd0a89dc2c" }
 rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "e36644127f31fa6e7ea0999b59432deb4a07f220", features = [
     "backup",
     "bundled",
@@ -113,6 +113,7 @@ serial_test = "3.2.0"
 
 # Non-Wasm dev dependencies
 [target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
+axum = "0.8.3"
 tempdir = "0.3.7"
 
 # Wasm dev dependencies
