--- a/packages/flutter/android/build.gradle
+++ b/packages/flutter/android/build.gradle
@@ -1,4 +1,4 @@
-version '0.7.2-dev1' // generated; do not edit
+version '0.8.0' // generated; do not edit
 group 'technology.breez.flutter_breez_liquid'
 
 buildscript {
