--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Clippy bindings
         working-directory: lib/bindings 
-        run: cargo clippy --all-targets -- -D warnings
+        run: cargo clippy --all-targets -- -A deprecated -D warnings
 
       - name: Clippy core
         working-directory: lib/core 
