Downgrade to ubuntu 22.04 for built binaries

--- a/.github/workflows/build-bindings-linux.yml
+++ b/.github/workflows/build-bindings-linux.yml
@@ -44,7 +44,7 @@ jobs:
 
   build:
     if: ${{ !inputs.use-dummy-binaries }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     name: build ${{ matrix.target }}${{ matrix.uniffi }}
     needs: setup
     strategy:
