--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -34,6 +34,7 @@ lwk_common = "0.9.0"
 lwk_signer = { version = "0.9.0", default-features = false }
 mockall = "0.13.1"
 tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
+tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
 tokio_with_wasm = { version = "0.8.2", features = [
     "macros",
     "rt",
