Fix version matching

--- a/.github/workflows/publish-swift.yml
+++ b/.github/workflows/publish-swift.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Set plist versions
         working-directory: build/lib/bindings/langs/swift/breez_sdk_liquidFFI.xcframework
         run: |
-          SHORT_VERSION=$(echo "${{ inputs.package-version }}" | grep -Eo '^(\d.\d.\d)')
+          SHORT_VERSION=$(echo "${{ inputs.package-version }}" | grep -Eo '^(\d+\.\d+\.\d+)')
           /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $SHORT_VERSION" ios-arm64/breez_sdk_liquidFFI.framework/Info.plist
           /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $SHORT_VERSION" ios-arm64_x86_64-simulator/breez_sdk_liquidFFI.framework/Info.plist
           /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $SHORT_VERSION" macos-arm64_x86_64/breez_sdk_liquidFFI.framework/Info.plist
