--- a/.github/workflows/build-bindings-android.yml
+++ b/.github/workflows/build-bindings-android.yml
@@ -21,35 +21,14 @@ on:
         required: false
         type: boolean
         default: false
-      uniffi-25:
-        description: 'If true, builds additional bindings for Uniffi 0.25'
-        required: false
-        type: boolean
-        default: false
 
 jobs:
-  setup:
-    name: Setup
-    runs-on: ubuntu-latest
-    steps:
-      - id: set-matrix
-        run: |
-          if [ ${{ inputs.uniffi-25 }} == true ]; then
-            echo "::set-output name=matrix::['', '-uniffi-25']"
-          else
-            echo "::set-output name=matrix::['']"
-          fi
-    outputs:
-      uniffi-matrix: ${{ steps.set-matrix.outputs.matrix }}
-
   build:
     if: ${{ !inputs.use-dummy-binaries }}
     runs-on: ubuntu-latest
-    name: build ${{ matrix.target }}${{ matrix.uniffi }}
-    needs: setup
+    name: build ${{ matrix.target }}
     strategy:
       matrix:
-        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
           aarch64-linux-android,
           armv7-linux-androideabi,
@@ -78,18 +57,11 @@ jobs:
         
     - uses: Swatinem/rust-cache@v2
       with:
-        key: ${{ matrix.uniffi }}
         workspaces: lib
 
     - name: Build bindings
-      if: matrix.uniffi != '-uniffi-25'
       working-directory: lib/bindings
       run: cargo ndk -t ${{ matrix.target }} build --release
-
-    - name: Build bindings Uniffi 0.25
-      if: matrix.uniffi == '-uniffi-25'
-      working-directory: lib/bindings
-      run: cargo ndk -t ${{ matrix.target }} build --no-default-features --features=uniffi-25 --release
 
     - name: Copy build output
       run: |
@@ -107,53 +79,46 @@ jobs:
     - name: Archive release
       uses: actions/upload-artifact@v4
       with:
-        name: bindings-${{ matrix.target }}${{ matrix.uniffi }}
+        name: bindings-${{ matrix.target }}
         path: dist/*
   
   jnilibs:
-    needs: 
-    - setup
-    - build
+    needs: build
     runs-on: ubuntu-latest
-    name: build jniLibs${{ matrix.uniffi }}
-    strategy:
-      matrix:
-        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
+    name: build jniLibs
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-aarch64-linux-android${{ matrix.uniffi }}
+          name: bindings-aarch64-linux-android
           path: arm64-v8a
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-armv7-linux-androideabi${{ matrix.uniffi }}
+          name: bindings-armv7-linux-androideabi
           path: armeabi-v7a
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-i686-linux-android${{ matrix.uniffi }}
+          name: bindings-i686-linux-android
           path: x86
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-x86_64-linux-android${{ matrix.uniffi }}
+          name: bindings-x86_64-linux-android
           path: x86_64
       
       - name: Archive jniLibs
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-android-jniLibs${{ matrix.uniffi }}
+          name: bindings-android-jniLibs
           path: ./*
 
   build-dummies:
     if: ${{ inputs.use-dummy-binaries }}
     runs-on: ubuntu-latest
-    name: build dummies ${{ matrix.target }}${{ matrix.uniffi }}
-    needs: setup
+    name: build dummies ${{ matrix.target }}
     strategy:
       matrix:
-        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
           aarch64-linux-android,
           armv7-linux-androideabi,
@@ -169,41 +134,36 @@ jobs:
       - name: Upload dummy Android ${{ matrix.target }} artifact
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-${{ matrix.target }}${{ matrix.uniffi }}
+          name: bindings-${{ matrix.target }}
           path: ./*
 
   jnilibs-dummy:
-    needs: 
-    - setup
-    - build-dummies
+    needs: build-dummies
     runs-on: ubuntu-latest
-    name: build jniLibs dummy ${{ matrix.uniffi }}
-    strategy:
-      matrix:
-        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
+    name: build jniLibs dummy 
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-aarch64-linux-android${{ matrix.uniffi }}
+          name: bindings-aarch64-linux-android
           path: arm64-v8a
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-armv7-linux-androideabi${{ matrix.uniffi }}
+          name: bindings-armv7-linux-androideabi
           path: armeabi-v7a
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-i686-linux-android${{ matrix.uniffi }}
+          name: bindings-i686-linux-android
           path: x86
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-x86_64-linux-android${{ matrix.uniffi }}
+          name: bindings-x86_64-linux-android
           path: x86_64
       
       - name: Archive jniLibs
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-android-jniLibs${{ matrix.uniffi }}
+          name: bindings-android-jniLibs
           path: ./*
