--- a/.github/workflows/build-bindings-ios.yml
+++ b/.github/workflows/build-bindings-ios.yml
@@ -21,35 +21,14 @@ on:
         required: false
         type: boolean
         default: false
-      uniffi-25:
-        description: 'If true, builds additional bindings for Uniffi 0.25'
-        required: false
-        type: boolean
-        default: false
 
 jobs:
-  setup:
-    name: Setup
-    runs-on: ubuntu-latest
-    steps:
-      - id: set-matrix
-        run: |
-          if [ ${{ inputs.uniffi-25 }} == true ]; then
-            echo "::set-output name=matrix::['', '-uniffi-25']"
-          else
-            echo "::set-output name=matrix::['']"
-          fi
-    outputs:
-      uniffi-matrix: ${{ steps.set-matrix.outputs.matrix }}
-
   build:
     if: ${{ !inputs.use-dummy-binaries }}
     runs-on: macOS-latest
-    name: build ${{ matrix.target }}${{ matrix.uniffi }}
-    needs: setup
+    name: build ${{ matrix.target }}
     strategy:
       matrix:
-        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
           aarch64-apple-ios,
           x86_64-apple-ios,
@@ -79,7 +58,6 @@ jobs:
         
     - uses: Swatinem/rust-cache@v2
       with:
-        key: ${{ matrix.uniffi }}
         workspaces: lib
 
     - name: Install xcode
@@ -88,44 +66,33 @@ jobs:
         xcode-version: latest-stable
 
     - name: Build bindings
-      if: matrix.uniffi != '-uniffi-25'
       working-directory: lib/bindings
       run: cargo build --release --target ${{ matrix.target }}
-
-    - name: Build bindings Uniffi 0.25
-      if: matrix.uniffi == '-uniffi-25'
-      working-directory: lib/bindings
-      run: cargo build --no-default-features --features=uniffi-25 --release --target ${{ matrix.target }}
     
     - name: Archive release
       uses: actions/upload-artifact@v4
       with:
-        name: bindings-${{ matrix.target }}${{ matrix.uniffi }}
+        name: bindings-${{ matrix.target }}
         path: lib/target/${{ matrix.target }}/release/libbreez_sdk_liquid_bindings.a
 
   merge:
     runs-on: macOS-latest
-    needs: 
-    - setup
-    - build
-    name: build ios-universal${{ matrix.uniffi }}
-    strategy:
-      matrix:
-        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
+    needs: build
+    name: build ios-universal
     steps:
     - uses: actions/download-artifact@v4
       with:
-        name: bindings-aarch64-apple-ios${{ matrix.uniffi }}
+        name: bindings-aarch64-apple-ios
         path: aarch64-apple-ios
 
     - uses: actions/download-artifact@v4
       with:
-        name: bindings-x86_64-apple-ios${{ matrix.uniffi }}
+        name: bindings-x86_64-apple-ios
         path: x86_64-apple-ios
 
     - uses: actions/download-artifact@v4
       with:
-        name: bindings-aarch64-apple-ios-sim${{ matrix.uniffi }}
+        name: bindings-aarch64-apple-ios-sim
         path: aarch64-apple-ios-sim
 
     - name: Build ios-universal
@@ -141,23 +108,21 @@ jobs:
     - name: Archive ios-universal
       uses: actions/upload-artifact@v4
       with:
-        name: bindings-ios-universal${{ matrix.uniffi }}
+        name: bindings-ios-universal
         path: ios-universal/libbreez_sdk_liquid_bindings.a
 
     - name: Archive ios-universal-sim
       uses: actions/upload-artifact@v4
       with:
-        name: bindings-ios-universal-sim${{ matrix.uniffi }}
+        name: bindings-ios-universal-sim
         path: ios-universal-sim/libbreez_sdk_liquid_bindings.a
 
   build-dummies:
     if: ${{ inputs.use-dummy-binaries }}
     runs-on: ubuntu-latest
-    name: build dummies ${{ matrix.target }}${{ matrix.uniffi }}
-    needs: setup
+    name: build dummies ${{ matrix.target }}
     strategy:
       matrix:
-        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
           aarch64-apple-ios,
           x86_64-apple-ios,
@@ -173,5 +138,5 @@ jobs:
       - name: Upload dummy ios ${{ matrix.target }} artifact
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-${{ matrix.target }}${{ matrix.uniffi }}
+          name: bindings-${{ matrix.target }}
           path: ./*
