--- a/.github/workflows/build-bindings-windows.yml
+++ b/.github/workflows/build-bindings-windows.yml
@@ -21,35 +21,14 @@ on:
         required: false
         type: boolean
         default: false
-      uniffi-25:
-        description: 'If true, builds additional bindings for Uniffi 0.25'
-        required: false
-        type: boolean
-        default: false
 
 jobs:
-  setup:
-    name: Setup
-    runs-on: ubuntu-latest
-    steps:
-      - id: set-matrix
-        run: |
-          if [ ${{ inputs.uniffi-25 }} == true ]; then
-            echo "::set-output name=matrix::['', '-uniffi-25']"
-          else
-            echo "::set-output name=matrix::['']"
-          fi
-    outputs:
-      uniffi-matrix: ${{ steps.set-matrix.outputs.matrix }}
-
   build:
     if: ${{ !inputs.use-dummy-binaries }}
     runs-on: windows-latest
-    name: build ${{ matrix.target }}${{ matrix.uniffi }}
-    needs: setup
+    name: build ${{ matrix.target }}
     strategy:
       matrix:
-        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
           i686-pc-windows-msvc,
           x86_64-pc-windows-msvc,
@@ -75,33 +54,24 @@ jobs:
         
     - uses: Swatinem/rust-cache@v2
       with:
-        key: ${{ matrix.uniffi }}
         workspaces: lib
 
     - name: Build bindings
-      if: matrix.uniffi != '-uniffi-25'
       working-directory: lib/bindings
       run: cargo build --release --target ${{ matrix.target }}
-
-    - name: Build bindings Uniffi 0.25
-      if: matrix.uniffi == '-uniffi-25'
-      working-directory: lib/bindings
-      run: cargo build --no-default-features --features=uniffi-25 --release --target ${{ matrix.target }}
 
     - name: Archive release
       uses: actions/upload-artifact@v4
       with:
-        name: bindings-${{ matrix.target }}${{ matrix.uniffi }}
+        name: bindings-${{ matrix.target }}
         path: lib/target/${{ matrix.target }}/release/breez_sdk_liquid_bindings.dll
 
   build-dummies:
     if: ${{ inputs.use-dummy-binaries }}
     runs-on: ubuntu-latest
-    name: build dummies ${{ matrix.target }}${{ matrix.uniffi }}
-    needs: setup
+    name: build dummies ${{ matrix.target }}
     strategy:
       matrix:
-        uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
           i686-pc-windows-msvc,
           x86_64-pc-windows-msvc,
@@ -114,5 +84,5 @@ jobs:
       - name: Upload dummy windows ${{ matrix.target }} artifact
         uses: actions/upload-artifact@v4
         with:
-          name: bindings-${{ matrix.target }}${{ matrix.uniffi }}
+          name: bindings-${{ matrix.target }}
           path: ./*
