--- a/.github/workflows/publish-kotlin-multiplatform.yml
+++ b/.github/workflows/publish-kotlin-multiplatform.yml
@@ -44,7 +44,7 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-android-jniLibs-uniffi-25
+          name: bindings-android-jniLibs
           path: lib/bindings/langs/kotlin-multiplatform/breez-sdk-liquid-kmp/src/androidMain/jniLibs
 
       - uses: actions/download-artifact@v4
@@ -52,24 +52,32 @@ jobs:
           name: bindings-kotlin-multiplatform
           path: lib/bindings/langs/kotlin-multiplatform/breez-sdk-liquid-kmp/src
 
-      - name: Copy jvmMain
-        working-directory: lib/bindings
+      - name: Move files
+        working-directory: lib/bindings/langs/kotlin-multiplatform/breez-sdk-liquid-kmp/src
         run: |
-          cp -r langs/kotlin-multiplatform/breez-sdk-liquid-kmp/src/jvmMain/kotlin langs/kotlin-multiplatform/breez-sdk-liquid-kmp/src/androidMain/
+          mkdir -p androidMain/kotlin/breez_sdk_liquid
+          mkdir -p commonMain/kotlin/breez_sdk_liquid
+          mkdir -p jvmMain/kotlin/breez_sdk_liquid
+          mkdir -p nativeMain/kotlin/breez_sdk_liquid
+          mv main/kotlin/breez_sdk_liquid/breez_sdk_liquid.android.kt androidMain/kotlin/breez_sdk_liquid/
+          mv main/kotlin/breez_sdk_liquid/breez_sdk_liquid.common.kt commonMain/kotlin/breez_sdk_liquid/
+          mv main/kotlin/breez_sdk_liquid/breez_sdk_liquid.jvm.kt jvmMain/kotlin/breez_sdk_liquid/
+          mv main/kotlin/breez_sdk_liquid/breez_sdk_liquid.native.kt nativeMain/kotlin/breez_sdk_liquid/
+          rm -r main/kotlin/breez_sdk_liquid
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-aarch64-apple-ios-uniffi-25
+          name: bindings-aarch64-apple-ios
           path: lib/bindings/langs/kotlin-multiplatform/breez-sdk-liquid-kmp/src/lib/ios-arm64
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-aarch64-apple-ios-sim-uniffi-25
+          name: bindings-aarch64-apple-ios-sim
           path: lib/bindings/langs/kotlin-multiplatform/breez-sdk-liquid-kmp/src/lib/ios-simulator-arm64
 
       - uses: actions/download-artifact@v4
         with:
-          name: bindings-x86_64-apple-ios-uniffi-25
+          name: bindings-x86_64-apple-ios
           path: lib/bindings/langs/kotlin-multiplatform/breez-sdk-liquid-kmp/src/lib/ios-simulator-x64
 
       - name: Build Kotlin Multiplatform project
