--- a/.github/workflows/build-language-bindings.yml
+++ b/.github/workflows/build-language-bindings.yml
@@ -128,21 +128,22 @@ jobs:
         if: ${{ inputs.kotlin }}
         working-directory: lib/bindings
         run: |
-          cargo run --bin uniffi-bindgen generate src/breez_sdk_liquid.udl --language kotlin -o ffi/kotlin
+          cargo install gobley-uniffi-bindgen --git https://github.com/breez/gobley --rev f920c275e4f60e22080a6cd280d9562d64eb6ac9
+          gobley-uniffi-bindgen -c ./uniffi.toml -o ffi/kotlin src/breez_sdk_liquid.udl
   
       - name: Archive Kotlin binding
         if: ${{ inputs.kotlin }}
         uses: actions/upload-artifact@v4
         with:
           name: bindings-kotlin
-          path: lib/bindings/ffi/kotlin/breez_sdk_liquid/breez_sdk_liquid.kt
+          path: lib/bindings/ffi/kotlin/main/kotlin/breez_sdk_liquid/breez_sdk_liquid.*.kt
 
       - name: Build Kotlin multiplatform binding
         if: ${{ inputs.kotlin }}
         working-directory: lib/bindings
         run: |
-          cargo install gobley-uniffi-bindgen --git https://github.com/gobley/gobley --tag v0.2.0
-          gobley-uniffi-bindgen -c ./uniffi.toml -o ffi/kmp src/breez_sdk_liquid.udl
+          cargo install gobley-uniffi-bindgen --git https://github.com/breez/gobley --rev f920c275e4f60e22080a6cd280d9562d64eb6ac9
+          gobley-uniffi-bindgen -c ./uniffi.kotlin-multiplatform.toml -o ffi/kmp src/breez_sdk_liquid.udl
 
       - name: Archive Kotlin multiplatform binding
         if: ${{ inputs.kotlin }}
