--- a/lib/bindings/uniffi.toml
+++ b/lib/bindings/uniffi.toml
@@ -1,15 +1,13 @@
-# Kotlin Multi Platform https://gobley.dev/docs/bindgen#bindgen-configuration
+# Kotlin https://gobley.dev/docs/bindgen#bindgen-configuration
 package_name = "breez_sdk_liquid"
-kotlin_targets = ["jvm", "android", "native"]
-use_pascal_case_enum_class = true
+cdylib_name = "breez_sdk_liquid_bindings"
+kotlin_multiplatform = false
+kotlin_targets = ["jvm"]
+kotlin_target_version = "1.8.20"
+disable_java_cleaner = true
 
 # https://mozilla.github.io/uniffi-rs/swift/configuration.html
 [bindings.swift]
-cdylib_name = "breez_sdk_liquid_bindings"
-
-# https://mozilla.github.io/uniffi-rs/kotlin/configuration.html
-[bindings.kotlin]
-package_name = "breez_sdk_liquid"
 cdylib_name = "breez_sdk_liquid_bindings"
 
 # https://mozilla.github.io/uniffi-rs/python/configuration.html
