--- a/packages/flutter/android/build.gradle
+++ b/packages/flutter/android/build.gradle
@@ -59,4 +59,7 @@ dependencies {
     implementation "net.java.dev.jna:jna:5.14.0@aar"
     /* JSON serialization */
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3'
+    /* Kotlin bindgen dependencies */
+    implementation "org.jetbrains.kotlinx:atomicfu:0.23.1" 
+    implementation("com.squareup.okio:okio:3.6.0")
 }
