fix: correct the dart_output dir being created

--- a/packages/flutter_breez_liquid/justfile
+++ b/packages/flutter_breez_liquid/justfile
@@ -54,7 +54,7 @@ gen ios='true':
 
 # Generate Dart/Flutter bindings & softlinks C headers
 codegen:
-	mkdir -p ../lib/src
+	mkdir -p ../lib/src/rust
 	{{frb_bin}}
 
 # Builds the uniFFI framework & softlinks C headers
