feat[nwc]: add plugin
Added: disable_mrh flag and fixed ListTransactions filter

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.3.3"
 anyhow = "1.0.80"
 bip39 = "2.0.0"
 breez-sdk-liquid = { path = "../lib/core" }
+breez-sdk-liquid-nwc = { path = "../lib/plugins/nwc" }
 clap = { version = "4.5.1", features = ["derive"] }
 log = "0.4.20"
 qrcode-rs = { version = "0.1", default-features = false }
