--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -6,7 +6,7 @@ panic = "abort"   # Abort on panic, as unwinding code does require extra binary 
 rpath = true
 
 [workspace]
-members = ["bindings", "core", "wasm"]
+members = ["bindings", "core", "wasm", "plugins/*"]
 resolver = "2"
 
 [workspace.package]
